вносить зміни в кнопках футера

--- a/index.html
+++ b/index.html
@@ -372,6 +372,23 @@
                </ul>
                </div>
 
+               
+               <form class="form js-speaker-form">
+                <div role="group" class="">
+                    <b class="group-title">Подпишитесь на рассылку</b>
+                <div class="group-button">
+                <div class="form-field">
+                <input type="email" name="mail" placeholder="E-mail" />
+                </div>
+                <button type="submit" class="button-primary">Подписаться
+                    <svg class="logo-primary">
+                        <use href="./images/sprite.svg#icon-icon-send-1"></use>
+                    </svg>
+                </button>
+                </div>
+                </div>
+               </form>
+
                <div class="subscribe">
                 <b>Подпишитесь на рассылку</b>
                 <input type="email" name="email" placeholder="E-mail">
@@ -386,5 +403,21 @@
         </section>
        </footer>
 
+
+       <script>
+        (() => {
+          document
+            .querySelector('.js-speaker-form')
+            .addEventListener('submit', e => {
+              e.preventDefault();
+  
+              new FormData(e.currentTarget).forEach((value, name) =>
+                console.log(`${name}: ${value}`),
+              );
+  
+              e.currentTarget.reset();
+            });
+        })();
+      </script>
 </body>
 </html>
