--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@
        <div class="backdrop">
            <div class="modal">
             <form class="form-blank js-speaker-form">
-                <h2 class="title">Оставьте свои данные, мы вам перезвоним</h2>
+                <b class="title">Оставьте свои данные, мы вам перезвоним</b>
                 <ul class="blank-field">
                     <li class="link">
                     <label for="name">Имя</label>
@@ -415,10 +415,10 @@
             
                   <div class="blank-checkbox">
                     <input type="checkbox" name="policy" id="policy" />
-                    <label for="policy">Соглашаюсь с рассылкой и принимаю Условия договора</label>
+                    <label for="policy">Соглашаюсь с рассылкой и принимаю <a href="./index.html">Условия договора</a></label>
                   </div>
             
-                  <button type="submit">Отправить</button>
+                  <button type="submit" class="button-primary">Отправить</button>
                 </form>
            </div>
        </div>
