позиціонує елементи форми

--- a/index.html
+++ b/index.html
@@ -395,16 +395,25 @@
                 <b class="title">Оставьте свои данные, мы вам перезвоним</b>
                 <ul class="blank-field">
                     <li class="link">
+                    <input type="text" name="name"  id="name" placeholder=" " />
                     <label for="name">Имя</label>
-                    <input type="text" name="name" id="name"/>
+                    <svg class="form-icone">
+                        <use href="./images/sprite.svg#icon-Vector"></use>
+                    </svg>
                     </li>
                     <li class="link">
-                    <label for="tel">Телефон</label>
-                    <input type="tel" name="tel" id="tel"/>
+                    <input type="tel" class="form-input" name="tel" id="tel" placeholder=" " />
+                    <label for="tel" class="form-label">Телефон</label>
+                    <svg class="form-icone">
+                        <use href="./images/sprite.svg#icon-Vector1"></use>
+                    </svg>
                     </li>
                     <li class="link">
+                    <input type="email" name="mail" id="mail" placeholder=" " />
                     <label for="mail">Почта</label>
-                    <input type="email" name="mail" id="mail"/>
+                    <svg class="form-icone">
+                        <use href="./images/sprite.svg#icon-Vector2"></use>
+                    </svg>
                     </li>
                     <li class="link">
                     <label for="comment"></label>
