--- a/portfolio.html
+++ b/portfolio.html
@@ -236,15 +236,21 @@
                     </ul>
                     </div>
      
-                    <div class="subscribe">
-                     <b>Подпишитесь на рассылку</b>
-                     <input type="email" name="email" placeholder="E-mail">
-                     <a href="" class="button primary">Подписаться
-                         <svg class="logo-primary">
-                             <use href="./images/sprite.svg#icon-icon-send-1"></use>
-                         </svg> 
-                     </a>
-                     </div>
+                    <form class="form js-speaker-form">
+                        <div role="group" class="">
+                            <b class="group-title">Подпишитесь на рассылку</b>
+                        <div class="group-button">
+                        <div class="form-field">
+                        <input type="email" name="mail" placeholder="E-mail" />
+                        </div>
+                        <button type="submit" class="button-primary">Подписаться
+                            <svg class="logo-primary">
+                                <use href="./images/sprite.svg#icon-icon-send-1"></use>
+                            </svg>
+                        </button>
+                        </div>
+                        </div>
+                       </form>
                 </div>
     
             </section>
