вносить поправки в модалку

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <section class="section-hero">
             <div class="container">
           <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
-          <a href="" class="button-hero button" data-modal-open>Заказать услугу</a>
+          <button class="button-hero button" type="button" data-modal-open>Заказать услугу</button>
         </section>
 
           <!-- Преимущества -->
